--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
      <li><a href="html/page_NoThrowFlags.html">NoThrowFlags</a></li>
      <li><a href="html/page_OpAddHelper.html">OpAddHelper</a></li>
      <li><a href="html/page_ScopeGuard.html">ScopeGuard</a></li>
+     <li><a href="html/page_AutoCast.html">AutoCast</a> <span class="Alert">to be continued</span> </li>
+     <li><a href="html/page_LockUse.html">LockUse</a> <span class="Alert">to be continued</span> </li>
     </ol>
    </li>
    <li><a href="html/page_Abort.html">Abort</a></li>
@@ -110,7 +112,8 @@
    <li><a href="html/page_Utf8.html">Utf8</a></li> 
    <li><a href="html/page_Symbol.html">Symbol</a></li>
    <li><a href="html/page_SymCount.html">SymCount</a></li> 
-   <li><a href="html/page_FeedBuf.html">FeedBuf</a></li>   -----
+   <li><a href="html/page_FeedBuf.html">FeedBuf</a></li>   
+   <li><a href="html/page_ForLoop.html">ForLoop</a></li> -----
    <li><a href="html/page_PrintStem.html">PrintStem</a></li>
    <li><a href="html/page_CapString.html">CapString</a></li>
    <li><a href="html/page_MakeString.html">MakeString</a></li>
