--- a/html/page_ForLoop.html
+++ b/html/page_ForLoop.html
@@ -1,9 +1,8 @@
-/* XXX.cpp */ 
+<!--
+/* page_ForLoop.html */
 //----------------------------------------------------------------------------------------
 //
 //  Project: CCore 3.60
-//
-//  Tag: Simple Fundamental Applied Desktop HCore XCore Target/
 //
 //  License: Boost Software License - Version 1.0 - August 17th, 2003 
 //
@@ -12,11 +11,27 @@
 //  Copyright (c) 2018 Sergey Strukov. All rights reserved.
 //
 //----------------------------------------------------------------------------------------
- 
-#include <CCore/inc/XXX.h>
- 
-namespace CCore {
+-->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+
+ <title>CCore -> ForLoop</title>
+
+ <link href="CCore.css" rel="stylesheet" type="text/css">
+
+</head>
+
+<body>
+
+<h2>ForLoop</h2>
+
+<p class="Files">Files <b>CCore/inc/ForLoop.h</b> <b>CCore/src/ForLoop.cpp</b></p>
 
 
-} // namespace CCore
+</body>
+
+</html>
 
