--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
      <li><a href="html/page_NoThrowFlags.html">NoThrowFlags</a></li>
      <li><a href="html/page_OpAddHelper.html">OpAddHelper</a></li>
      <li><a href="html/page_ScopeGuard.html">ScopeGuard</a></li>
-     <li><a href="html/page_AutoCast.html">AutoCast</a> <span class="Alert">to be continued</span> </li>
-     <li><a href="html/page_LockUse.html">LockUse</a> <span class="Alert">to be continued</span> </li>
+     <li><a href="html/page_AutoCast.html">AutoCast</a></li>
+     <li><a href="html/page_LockUse.html">LockUse</a></li>
     </ol>
    </li>
    <li><a href="html/page_Abort.html">Abort</a></li>
