--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
    <li><a href="html/page_LangDataMap.html">LangDataMap</a></li>
    <li><a href="html/page_PretextFileToMem.html">PretextFileToMem</a></li>
    <li><a href="html/page_Deflate.html">Deflate</a></li>
+   <li><a href="html/page_IntervalTree.html">IntervalTree</a></li>
   </ol>
  </li>
 
