--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
      <li><a href="html/page_ScopeGuard.html">ScopeGuard</a></li>
      <li><a href="html/page_AutoCast.html">AutoCast</a></li>
      <li><a href="html/page_LockUse.html">LockUse</a></li>
+     <li><a href="html/page_NullMovePtr.html">NullMovePtr</a></li>
     </ol>
    </li>
    <li><a href="html/page_Abort.html">Abort</a></li>
