--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
   <ol>
    <li>Aspect</li>
    <li>Bitmap</li>
+   <li>Book</li>
    <li>BookLab</li>
    <li>ContourLab</li>
    <li>DDLDisplay</li>
