--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
    <li><a href="html/page_Pow.html">Pow</a></li>
    <li><a href="html/page_PrintRatio.html">PrintRatio</a></li>
    <li><a href="html/page_ErrorText.html">ErrorText</a></li>
+   <li><a href="html/page_SymPart.html">SymPart</a></li>
   </ol>
  </li>
 
